# mixtec-namedate-classifiers

./: .gitignore  README.md  run_experiments.py
Bead Counter/: augment_images.py  classification.py  config.toml  environment.yml  pyproject.toml  setup_dataset.sh  walkthrough.md
Bead Counter/going_modular/going_modular/: engine.py  train.py
Name-Date Classifier/: augment_images.py  classification.py  config.toml  environment.yml  helper_functions.py  pyproject.toml  walkthrough.md
Name-Date Classifier/engine/: __init__.py  engine.py  utils.py
Name-Date Classifier/going_modular/going_modular/: engine.py  predictions.py
Symbol Classifier/: augment_images.py  classification.py  config.toml  helper_functions.py  pyproject.toml  setup_dataset.sh  walkthrough.md
Symbol Classifier/going_modular/going_modular/: predictions.py  utils.py
