[project]
name = "name-date-classifier"
version = "0.1.0"
description = "Name-Date classifier for Mixtec codices"
requires-python = ">=3.9"
dependencies = [
    "loguru",
    "matplotlib",
    "numpy",
    "pillow",
    "scikit-learn",
    "seaborn",
    "tomli",
    "torch",
    "torchinfo",
    "torchvision",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
